<resources>
    <string name="service_id" translatable="false">com.maximum.fastride.service</string>
    <string name="oxford_subscription_key">f862259efc314bdbbef51000f399f168</string>
    <string name="app_name" translatable="false">FastRide</string>
    <string name="app_label" translatable="false">Fast Ride</string>
    <string name="action_settings">Settings</string>
    <string name="complete_registration">Complete your info</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_activity_register">Fast Ride: Registration</string>
    <string name="title_activity_confirm_ride">Confirm</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_phone">Phone number</string>
    <string name="phone_hint">050-1234-567</string>
    <string name="prompt_use_phone">Show your number to others</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="plus_sign_out">Switch Google+ account</string>
    <string name="plus_disconnect">Disconnect from Google+</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_register">Register</string>
    <string name="registration_add_title">Performing registration</string>
    <string name="registration_add_status">Adding your data</string>
    <string name="registration_add_status_wait">Just few seconds</string>
    <string name="default_value">no value</string>
    <string name="no_phone_number">Provide your phone number. You may prefer to not share it with others by switching off the following indicator</string>
    <string name="facebook_app_id" translatable="false">1554616841424048</string>
    <string name="title_section_user">User Profile</string>
    <string name="title_section_cars">Cars</string>
    <string name="mode_name_driver">Driver</string>
    <string name="mode_name_passenger">Passenger</string>
    <string name="btnFindRide">Find a ride</string>
    <string name="title_activity_main">Fast Ride</string>
    <string name="title_activity_driver_role">Driver Mode</string>
    <string name="subtitle_activity_driver_role">Driver Mode</string>
    <string name="title_activity_passenger_role">Passenger Mode</string>
    <string name="subtitle_activity_passenger_role">Passenger Mode</string>
    <string name="title_activity_tutorial">Tutorials</string>
    <string name="subtitle_activity_tutorial">Tutorials</string>
    <string name="title_activity_my_rides">My Rides</string>
    <string name="subtitle_activity_my_rides">MyRides</string>
    <string name="title_activity_settings">Settings</string>
    <string name="subtitle_activity_settings">Settings</string>
    <string name="title_activity_ride_details">Ride Details</string>
    <string name="passengers_header">Passengers</string>
    <string name="drivers_header">Select the driver</string>
    <string name="new_version_title">New version is ready</string>
    <string name="new_version_conent">We strongly recommend you to install the newest version. Would you like to do so?</string>
    <string name="default_ride_code">00000</string>
    <string name="ride_code_label">Ride Code:</string>
    <string name="ride_code_title">Type in Ride Code</string>
    <string name="ride_code_dialog_content">You may see this code on the device\'s display of the driver</string>
    <string name="ride_code_hint">5 digits without dashes</string>
    <string name="passenger_confirm">You want to confirm your ride with</string>
    <string name="ride_code_refill"></string>
    <string-array name="drawers_array_drawer">
        <item>Start</item>
        <item>My rides</item>
        <item>Settings</item>
        <item>Tutorial</item>
    </string-array>
    <string-array name="tutorial_titles">
        <item>Intro</item>
        <item>Driver</item>
        <item>Passenger</item>
        <item>Re-claim</item>
    </string-array>
    <string-array name="my_rides_titles">
        <item>General</item>
        <item>Rejected</item>
    </string-array>
    <string name="drive_details">drive details</string>
    <string name="list_of_passengers">passengers list</string>
    <string name="ride_photo">Ride Photo</string>
    <string name="operating_modes">Operating modes</string>
    <string name="edit_car_button_title">Edit</string>
    <string name="edit_car_button_title2">Specify</string>
    <string name="edit_car_dialog_caption1">Choose a riding car</string>
    <string name="edit_car_dialog_caption2">Specify your car(s)</string>
    <string name="edit_car_dialog_text">You have not yet specified the car(s) belongs to you.</string>
    <string name="add_car_dialog_caption">Add a car</string>
    <string name="edit_car_dialog_caption">Edit a car</string>
    <string name="edit_phone_dialog_caption">Edir Phone Number</string>
    <string name="add_car_button_add">Add</string>
    <string name="edit_car_button_save">Save</string>
    <string name="edit_car_button_delete">Delete</string>
    <string name="add_car_button_cancel">Cancel</string>
    <string name="add_car_hint">Car number</string>
    <string name="add_car_nick">Car nickname</string>
    <string name="car_number_validation_error">Type in a valid car number</string>
    <string name="enable_wifi_question">Enable Wi-Fi on your device?</string>
    <string name="enable_location_question">Do you want to enable location services on the device?</string>
    <string name="code_retry_action">Try again</string>
    <string name="registration_finish">Finish</string>
    <string name="registration_next">Next</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="fb_error">No network access</string>
    <string name="fb_error_msg">The error was: </string>
    <string name="title_activity_about">About</string>
    <string name="version_title">Version </string>
    <string name="dialog_confirm_registration">Replace previous registration?</string>
    <string name="registration_already_performed">You already registered with Fast Ride app.</string>
    <string name="add_cars_caption">Add your cars</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="close">Close</string>
    <string name="download_data">Initializing data</string>
    <string name="download_geofences_desc">Downloading geo-fences</string>
    <string name="download_classifiers_desc">Downloading classifiers</string>
    <string name="play_services_error">Google Play services is not available. Registration is impossible.</string>
    <string name="action_refresh_settings">Update GeoFences</string>
    <string name="action_refresh_classifiers">Update Classifiers</string>
    <string name="action_check_updates">Check for Update&#8230;</string>
    <string name="latest_version">You already have a latest version of FastRide.</string>
    <string name="about">About</string>
    <string name="no_face_detection">This camera does not support Face detection feature</string>
    <string name="copyright">&#169; 2015 Maximum. All rights reserved.</string>
    <string name="license" translatable="false">Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</string>
    <string name="btnSubmitText">Submit</string>
    <string name="driverTabCaption">Driver</string>
    <string name="passengerTabCaption">Passenger</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_code">Ride Code</string>
    <string name="action_debug">Debug</string>
    <string name="action_camera">FD</string>
    <string name="action_camera_cv">Camera CV</string>
    <string name="passenger_tutorial_fragment">Passenger tutorial</string>
    <string name="driver_tutorial_fragment">Driver tutorial</string>
    <string name="reclaim_tutorial_fragment">Reclamation tutorial</string>
    <string name="intro_tutorial_fragment">Introduction tutorial</string>
    <string name="geofence_transition_entered">You\'ve entered the monitored area</string>
    <string name="geofence_transition_dwell">You\'re riding in monitored area</string>
    <string name="geofence_transition_exited">You exited geofences area</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>
    <string name="geofence_outside">You are outside of monitored area</string>
    <string name="geofence_outside_title">Remind you when getting inside?</string>
    <string name="geofence_positive_answer">Yes, remind me</string>
    <string name="geofence_negative_answer">No, I\'ll try later</string>
    <string name="not_connected">GoogleApiClient no yet connected. Try again.</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>
    <string name="nearby_error_nowifi">Not connected to WiFi network</string>
    <string name="geofence_transition_notification_text">Click notification to submit your ride</string>
    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>
    <string name="title_activity_register2">Register2Activity</string>
    <string name="title_activity_gfences">GFencesActivity</string>
    <string name="title_activity_camera_cv">CameraCVActivity</string>
    <string name="menu_next_curve_filter">Curve</string>
    <string name="menu_next_mixed_filter">Mix</string>
    <string name="menu_next_convultion_filter">Conv</string>
    <string name="menu_next_detection_filter">Detection</string>
    <string name="camera_directive_1">Embrace the entire cabin</string>
    <string name="camera_directive_2">Found %d faces</string>
    <string name="detection_results">Detection results</string>
    <string name="detection_save">Detected %d faces. Save this picture?</string>
    <string name="detection_center_caption">Detect with central authority</string>
    <string name="detection_center_desc">Send this picture to the detection center?</string>
    <string name="detection_send">Sending the picture to the detection center</string>
    <string name="detection_wait">Please wait</string>
    <string name="detection_freeze">Click to make a picture</string>
    <string name="detection_store">Saving the picture on the detection center</string>
    <string name="detection_update">Updating your data</string>
</resources>