<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.maximum.fastride.CameraCVActivity">

    <item android:id="@+id/menu_next_curve_filter"
        android:title="@string/menu_next_curve_filter"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText" />

    <item android:id="@+id/menu_next_mix_filter"
        android:title="@string/menu_next_mixed_filter"
        android:orderInCategory="200"
        app:showAsAction="ifRoom|withText" />

    <item android:id="@+id/menu_next_conv_filter"
        android:title="@string/menu_next_convultion_filter"
        android:orderInCategory="300"
        app:showAsAction="ifRoom|withText"/>

    <item android:id="@+id/menu_next_detection_filter"
        android:title="@string/menu_next_detection_filter"
        android:orderInCategory="400"
        app:showAsAction="ifRoom|withText" />
</menu>
